# NetLogo-MCP

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_STATUS.md  LICENSE  README.md  glama.json  plan.md  pyproject.toml  research.md  server.json  smithery.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
assets/: README.md  ai-image-brief.json
dashboard/: app.py
desktop-app/: index.html  package-lock.json  package.json
desktop-app/src/: App.css  App.tsx
desktop-app/src-tauri/: tauri.conf.json
desktop-app/src-tauri/src/: lib.rs
docs/: BingSiteAuth.xml  CLIENTS.md  COMSES_PLAN.md  CONFIGURATION.md  DEVELOPMENT.md  SECURITY.md  TOOLS.md  index.html  llms.txt  robots.txt  sitemap.xml
docs/assets/: demo.webm
docs/market/: design.md  model-bakeoff.md
docs/research/: agent-types-spec.md  ebola-knowledge-base.md  ebola-meeting-2026-06-23.md  ebola-model-findings-report.md  ebola-project-full-story.md  serge-discussion-prep.md
exports/plots/: plots_20260421_205115_813135_5565c744.csv
models/: Ebola_Mongbwalu_InformationTrust.nlogox  EcoEvolution_Advanced.nlogox  Flood-Avalanche-Simulation.nlogox  Flood-Avalanche-v2-code.txt  Lab2_Basic_Simulation.nlogox  Lab4_Time_Environment_Interaction.nlogox  Lab5_Fireflies_Full.nlogox  Lab5_Fireflies_Synchronization.nlogox  Task1_RobotNavigation.nlogox  Task2_PheromoneForaging.nlogox  ocean_predator_prey.nlogox  random_walk_demo.nlogox  slime-lattice.nlogox  slime_mold_aggregation.nlogox  wildlife_park.nlogox  wildlife_park_q1.nlogox  wildlife_park_q2.nlogox
overleaf/: README.md  agent-types-diagram.excalidraw  main.tex
overleaf/supplementary/: exp1_misinformation_gradient.csv  exp2_intervention_impact.csv
src/netlogo_mcp/: __init__.py  bspace.py  comses.py  config.py  prompts.py  resources.py  server.py  tools.py
src/netlogo_mcp/data/: netlogo7_transition.md  primitives.md  programming_guide.md
src/netlogo_mcp/data/market/: base_rates.json
src/netlogo_mcp/data/market/audience_examples/: busy_parents.yaml  campaign_email_ab.yaml  saas_founders.yaml
src/netlogo_mcp/market/: __init__.py  analytics.py  archetypes.py  calibration.py  cognition.py  config.py  netlogo_gen.py  orchestrator.py  personas.py  prompts.py  report.py  schemas.py  stimulus.py  store.py  tools.py  worlds.py
tests/: conftest.py  manual_smoke.py  test_bspace.py  test_bspace_tools.py  test_comses.py  test_config.py  test_resources.py  test_server.py  test_tools.py
tests/fixtures/comses/: codebase_detail.json  release_detail.json  search_result.json
tests/market/: conftest.py  test_analytics_report.py  test_archetypes.py  test_cognition.py  test_market_tools.py  test_orchestrator.py  test_personas.py  test_stimulus_store_calibration.py  test_worlds.py
validation/: bass_diffusion.py
validation/hillstrom/: README.md  backtest.py
validation/spike/: spike.py
